@@ -1,6 +1,15 @@
 #if !defined(RESIP_CONFIG_HXX)
 #define RESIP_CONFIG_HXX
 
+/* Version number of RESIP */
+#undef RESIP_VERSION
+
+/* Major, minor and micro version number of the resip library package.
+   Use these macros to test for features in specific releases. */
+#undef RESIP_MAJOR_VERSION
+#undef RESIP_MINOR_VERSION
+#undef RESIP_MICRO_VERSION
+
 /* Define to utilize the OpenSSL cryptography library. */
 #undef USE_SSL
 
